add MapStruct change user module to use Hexagonal architecture