@@ -1,42 +1,48 @@
-package com.david.ecommerceapi.user.service;
+package com.david.ecommerceapi.user.application;
 
 import com.david.ecommerceapi.user.domain.Role;
 import com.david.ecommerceapi.user.domain.User;
-import com.david.ecommerceapi.user.domain.UserDTO;
-import com.david.ecommerceapi.user.domain.UserDTOMapper;
-import com.david.ecommerceapi.user.repository.UserRepository;
+import com.david.ecommerceapi.user.infrastructure.SpringUserRepository;
+import com.david.ecommerceapi.user.infrastructure.UserMapper;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.assertj.core.api.FactoryBasedNavigableListAssert.assertThat;
-import static org.hamcrest.Matchers.any;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 class UserServiceTest {
     @Mock
-    private UserRepository userRepository;
+    private SpringUserRepository userRepository;
     @Mock
-    private UserDTOMapper userDTOMapper;
+    private UserMapper userMapper;
     @InjectMocks
-    private  UserService userService;
-    public User USER_PREPARED = new User(1L,"Pepe","Lopez","pepito@gmail.com","1",Role.USER,null);
-    public User USER_MODIFIED_PREPARED = new User(1L,"Juan","Gonzalez","juanito@gmail.com","1",Role.USER,null);
-    public UserDTO USERDTO_PREPARED = new UserDTO(1L,"Pepe","Lopez","pepito@gmail.com", Role.USER);
+    private UserService userService;
+
+    private AutoCloseable autoCloseable;
+
+    public User USER_PREPARED = new User(1L, "Pepe", "Lopez", "pepito@gmail.com", "1", Role.USER, null);
+
+    public User USER_MODIFIED_PREPARED = new User(1L, "Juan", "Gonzalez", "juanito@gmail.com", "1", Role.USER, null);
+
+    public UserDTO USER_DTO_PREPARED = new UserDTO(1L, "Pepe", "Lopez", "pepito@gmail.com", Role.USER);
 
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        autoCloseable = MockitoAnnotations.openMocks(this);
+    }
+
+    @AfterEach
+    void closeMocks() throws Exception {
+        autoCloseable.close();
     }
 
     @Test
@@ -48,19 +54,19 @@ class UserServiceTest {
 
         userRepository.save(USER_MODIFIED_PREPARED);
 
-        assertEquals("Juan",USER_MODIFIED_PREPARED.getFirstname());
+        assertEquals("Juan", USER_MODIFIED_PREPARED.getFirstname());
     }
 
     @Test
     void findAll() {
 
-        List<User> userListPrepared = new ArrayList<>(Arrays.asList(USER_PREPARED));
+        List<User> userListPrepared = new ArrayList<>(List.of(USER_PREPARED));
 
         Mockito.when(userRepository.findAll()).thenReturn(userListPrepared);
 
         List<UserDTO> userList = userService.findAll();
 
-        assertEquals(1,userList.size());
+        assertEquals(1, userList.size());
     }
 
     @Test
@@ -68,12 +74,12 @@ class UserServiceTest {
 
         Mockito.when(userRepository.findById(1L)).thenReturn(Optional.ofNullable(USER_PREPARED));
 
-        Mockito.when(userDTOMapper.apply(Mockito.any(User.class)))
-                .thenReturn(USERDTO_PREPARED);
+        Mockito.when(userMapper.userToUserDTO(Mockito.any(User.class)))
+                .thenReturn(USER_DTO_PREPARED);
 
-        Optional<UserDTO> userDB = userService.findById(1L);
+        UserDTO userDB = userService.findById(1L);
 
-        assertEquals(1,userDB.get().getId());
+        assertEquals(1, userDB.getId());
     }
 
     @Test
